--- a/misc/process-support/proposal.html
+++ b/misc/process-support/proposal.html
@@ -98,20 +98,20 @@
               <td>Hilario</td>
               <td>Alessandra</td>
               <td>20114643</td>
-              <td>dgg0970@autuni.ac.nz</td>
+              <td>dgg0970</td>
          </tr>
         <p align = "left"</p>
         <th scope="row">Team Member 2</th>
             <td>Gibson</td>
             <td>Callum</td>
             <td>15906010</td>
-            <td>bxh9553@autuni.ac.nz</td>
+            <td>bxh955</td>
           </tr>
         <th scope="row">Team Member 3</th>
             <td>Jung</td>
             <td>Rino</td>
             <td>21131579</td>
-            <td>nbk0694@autuni.ac.nz</td>
+            <td>nbk0694</td>
           </tr>
         </table>
         <hr>
@@ -172,7 +172,7 @@
         <hr>
     
         <h4>Link to your Team Repository:</h4>
-        <p><a href="https://github.com/CallumdGibson/1403.github.io">Link</a></p>
+        <p><a href="https://github.com/CallumdGibson/1403.github.io" target="_blank">Link</a></p>
 
         <h4>TA name: Robert Le, Date Proposal Approved: 06/05/2021</h4>
         <br>
